# data-engineering-project

./: Dockerfile  README.md  data_processing_pipeline.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
